--- a/src/blocks/widgets/page-header/page-header.scss
+++ b/src/blocks/widgets/page-header/page-header.scss
@@ -7,6 +7,7 @@
   z-index: 9999;
   min-height: 48px;
   background-color: $black;
+  transition: height 480ms cubic-bezier(.4,0,.6,1) 80ms,background 480ms cubic-bezier(.4,0,.6,1) 80ms;
 
   @media (min-width: $screen-xl) {
     padding-top: 13px;
