--- a/src/pug/mixins.pug
+++ b/src/pug/mixins.pug
@@ -19,3 +19,7 @@ include ../blocks/widgets/page-header/page-header.pug
 include ../blocks/widgets/page-footer/page-footer.pug
 include ../blocks/widgets/sidebar/sidebar.pug
 include ../blocks/widgets/module-marketing/module-marketing.pug
+include ../blocks/widgets/site-application/site-application
+include ../blocks/widgets/all-buttons/all-buttons
+include ../blocks/widgets/bg-video/bg-video
+include ../blocks/widgets/bg-link/bg-link
