--- a/src/blocks/entities/nav-list/nav-list.scss
+++ b/src/blocks/entities/nav-list/nav-list.scss
@@ -122,3 +122,76 @@
   width: 29px;
   height: 29px;
 }
+
+.nav-list__sub-item {
+  @include ul-none;
+  display: none;
+
+  .nav-list__sub-item {
+    border: 0;
+  }
+
+  &--b0 {
+    border: 0;
+  }
+}
+
+.nav-list__arrow {
+  display: block;
+  position: absolute;
+  left: -16px;
+  top: 15px;
+
+  width: 8px;
+  height: 8px;
+  padding: 0;
+  margin: 0;
+  border: 0;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-image: url("data:image/svg+xml,%3Csvg width='7' height='10' viewBox='0 0 7 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7 4.99995L9.63877e-08 9.0414L0 0.958496L7 4.99995Z' fill='%233D81C6'/%3E%3C/svg%3E%0A");
+  z-index: 1;
+  cursor: pointer;
+  transform-origin: center center;
+  transition: $time;
+}
+
+.nav-list__sub-item .nav-list__link {
+  padding-left: 39px;
+}
+
+.nav-list__sub-item .nav-list__arrow {
+  left: 24px;
+}
+
+.nav-list__sub-item .nav-list__item:hover,
+.nav-list__sub-item .nav-list__item.active {
+  .nav-list__link {
+    padding-left: 39px;
+  }
+
+  .nav-list__arrow {
+    left: 24px;
+  }
+}
+
+.nav-list__item--hover {
+  @media (min-width: $screen-xl) {
+    height: 40px;
+  }
+
+  .nav-list__sub-item {
+    height: 0;
+    transition: $time;
+    overflow: hidden;
+
+    display: block;
+    border-top: 0;
+  }
+
+  .nav-list__sub-item .nav-list__link,
+  .nav-list__item:hover .nav-list__link {
+    padding-left: 31px;
+  }
+}
