--- a/src/404.pug
+++ b/src/404.pug
@@ -1,12 +1,12 @@
 extends pug/layout.pug
 
 block meta
-  title Сраница не найдена
+  title Страница не найдена
 
 block content
-  main.order-page
-    section.order-page__block
-      img.order-page__img(src='img/content/404-error.png', alt='Страница не найдена')
-      h1.title.order-page__title Страница не найдена
-      p.order-page__text Вероятнее всего, вы перешли на несуществующую страницу
-      a.btn.btn--main.order-page__btn(href='/') Вернуться
+  +client-errors({
+    imgSrc: 'img/content/error-smile.png',
+    title: 'Ошибка 404',
+    text: 'Страница не найдена',
+    dataTheme: 1
+  })
