--- a/src/pug/mixins.pug
+++ b/src/pug/mixins.pug
@@ -23,3 +23,4 @@ include ../blocks/widgets/site-application/site-application
 include ../blocks/widgets/all-buttons/all-buttons
 include ../blocks/widgets/bg-video/bg-video
 include ../blocks/widgets/bg-link/bg-link
+include ../blocks/widgets/client-errors/client-errors
