--- a/src/blocks/widgets/all-buttons/all-buttons.pug
+++ b/src/blocks/widgets/all-buttons/all-buttons.pug
@@ -7,6 +7,9 @@ mixin all-buttons(dataTheme)
       align-items: center;
       background: var(--Cod-Gray, #101010);
     `,
+    desktopStyle: `
+      border-radius: 8px;
+    `,
     dataTheme: dataTheme,
   })
     +fragment-text({
