--- a/src/blocks/widgets/bg-link/bg-link.pug
+++ b/src/blocks/widgets/bg-link/bg-link.pug
@@ -5,11 +5,13 @@ mixin bg-link(dataTheme)
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      border-radius: 8px;
       background: #121212;
       height: 500px;
       padding-top: 100px;
       padding-bottom: 100px;
+    `,
+    desktopStyle: `
+      border-radius: 8px;
     `,
     dataTheme: dataTheme,
   })
