--- a/src/blocks/widgets/bg-video/bg-video.pug
+++ b/src/blocks/widgets/bg-video/bg-video.pug
@@ -4,10 +4,12 @@ mixin bg-video(dataTheme)
         display: flex;
         flex-direction: column;
         align-items: center;
-        border-radius: 8px;
         background: #121212;
         height: 500px
       `,
+    desktopStyle: `
+      border-radius: 8px;
+    `,
     dataTheme: dataTheme,
   })
     +fragment-background({
