--- a/src/blocks/widgets/module-marketing/module-marketing.pug
+++ b/src/blocks/widgets/module-marketing/module-marketing.pug
@@ -148,5 +148,13 @@ mixin module-marketing(dataTheme)
       dataTheme: dataTheme,
     })
       +fragment-img({
-        img: 'img/content/marysya2.png'
+        img: 'img/content/marysya2.png',
+        mobileStyle: `
+          max-width: 181.002px;
+        `,
+        desktopStyle: `
+          max-width: 227.694px;
+        `,
+        count: 1,
+        dataTheme: dataTheme,
       })
