--- a/src/blocks/shared/ui/btn-link/btn-link.scss
+++ b/src/blocks/shared/ui/btn-link/btn-link.scss
@@ -1,4 +1,5 @@
 .btn-link {
+  @include paragraph17Regular;
   display: inline-flex;
   align-items: center;
   gap: 4px;
@@ -14,6 +15,10 @@
   background-color: transparent;
   background-image: none;
   cursor: pointer;
+
+  &--m-size {
+    @include paragraph19Regular;
+  }
 
   &:hover,
   &:focus {
