--- a/src/blocks/widgets/bg-link/bg-link.pug
+++ b/src/blocks/widgets/bg-link/bg-link.pug
@@ -71,8 +71,8 @@ mixin bg-link(dataTheme)
         span Презентация
         svg(width="18" height="18")
           use(href="img/symbols.svg#icon-play")
-
-      a.btn-link.btn-link--m-size(href="#") Презентация
+      a.btn-link.btn-link--m-size(href="#")
+        span Презентация
         svg(width="7" height="12")
           use(href="img/symbols.svg#icon-right")
       a.btn-link(href="#")
