--- a/src/blocks/entities/socials/socials.pug
+++ b/src/blocks/entities/socials/socials.pug
@@ -33,5 +33,5 @@ mixin socials()
   ul.socials
     each item in list
       li.socials__item
-        a.socials__link
+        a.socials__link(href="#")
           img(src=`img/content-icon/${item.img}.svg` alt=item.alt)
