--- a/src/blocks/shared/js-config/hover-menu/hover-menu.scss
+++ b/src/blocks/shared/js-config/hover-menu/hover-menu.scss
@@ -20,3 +20,7 @@
   opacity: 1;
   transition: opacity .32s cubic-bezier(.4,0,.6,1) 80ms,visibility .32s step-start 80ms
 }
+
+.nav-open .phone__wrap--arrow::after {
+  transform: rotate(-135deg);
+}
