--- a/src/blocks/shared/style-libs/grid-tpl/grid-tpl.scss
+++ b/src/blocks/shared/style-libs/grid-tpl/grid-tpl.scss
@@ -1,14 +1,26 @@
-@mixin grid-default($i) {
-  display: grid;
-  grid-template-columns: repeat($i, 1fr);
-  gap: 30px;
-}
-
 .grid-tpl-layout {
   display: grid;
   gap: 30px;
 
   @media (min-width: $screen-xl) {
     grid-template-columns: 270px 1fr;
+  }
+}
+
+.flex-tpl-layout {
+  display: flex;
+  gap: 30px;
+}
+
+.flex-tpl-layout__left-col {
+  @media (min-width: $screen-xl) {
+    width: 270px;
+    flex-shrink: 0;
+  }
+}
+
+.flex-tpl-layout__right-col {
+  @media (min-width: $screen-xl) {
+    flex-grow: 1;
   }
 }
