--- a/src/blocks/shared/ui/page/page.scss
+++ b/src/blocks/shared/ui/page/page.scss
@@ -28,12 +28,23 @@
 }
 
 .page__content {
-  padding-top: 48px;
+  display: flex;
+  flex-direction: column;
   flex-grow: 1;
+  padding-top: 48px;
 
   @media (min-width: $screen-xl) {
     padding-top: 72px;
   }
+}
+
+.page__column {
+  display: flex;
+  flex-direction: column;
+}
+
+.page__grow {
+  flex-grow: 1;
 }
 
 .page__footer {
