--- a/src/blocks/shared/style-libs/constans/variables.scss
+++ b/src/blocks/shared/style-libs/constans/variables.scss
@@ -45,6 +45,7 @@ $system-black-30-dark:        rgba($black, 0.3);
 $shark:                       #1D1D1F;
 $jumbo:                       #86868B;
 $athens-gray:                 #F5F5F7;
+$systemWhite80Dark:           rgba($white, 0.8);
 
 //btn color
 $blue-default:                #0071E3;
