--- a/src/blocks/widgets/page-header/page-header.pug
+++ b/src/blocks/widgets/page-header/page-header.pug
@@ -4,27 +4,16 @@ mixin page-header({})
   header.page-header&attributes(attributes).page__header
     .container
       .page-header__xs-row
-        +burger('Меню').d-xl-none.page-header__burger
-        .flex-tpl-layout
+        .flex-tpl-layout.page-header__layout-center
           .flex-tpl-layout__left-col
             +logo('index.html')
               picture
                 source(srcset='img/content/logo.svg' media=`(min-width: ${mediaSize.xl}px)`)
                 img(src='img/content/logo-mobile.svg', alt='Логотип')
           .flex-tpl-layout__right-col
-            .page-header__row.d-none.d-xl-flex
-              +form.page-header__search
-                +field-text({
-                  mods: '',
-                  val: '',
-                  attrs: {
-                    name: 'search',
-                    placeholder: 'Поиск'
-                  }
-                }).field-text--search.js-field
-                  button.field-text__reset(type="reset" aria-label="Сброс")
-              +phone.js-hover
-      .submenu
-        .submenu__content
-          +contact-group
-    +mb-menu
+            .page-header__row
+              +burger('Меню')(data-hover-menu="").page-header__burger
+      +submenu
+        +nav-submenu
+        +contact-group
+    //- +mb-menu
