--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -43,7 +43,7 @@ html.page(lang='ru')
       +page-header({})
       .container.container--xs-p-none.page__content
         .flex-tpl-layout.page__grow
-          +sidebar.flex-tpl-layout__left-col
+          //- +sidebar.flex-tpl-layout__left-col
           .flex-tpl-layout__right-col.page__column
             main.main-content
               block content
