--- a/src/pug/mixins.pug
+++ b/src/pug/mixins.pug
@@ -6,14 +6,17 @@ include ../blocks/shared/ui/burger/burger.pug
 include ../blocks/shared/ui/logo/logo.pug
 include ../blocks/shared/ui/form/form.pug
 include ../blocks/shared/ui/field-text/field-text.pug
+include ../blocks/shared/ui/submenu/submenu
 
 include ../blocks/entities/fragment/fragment.pug
 include ../blocks/entities/phone/phone.pug
 include ../blocks/entities/nav-list/nav-list.pug
 include ../blocks/entities/contacts-info/contacts-info.pug
-include ../blocks/entities/contact-group/contact-group.pug
 include ../blocks/entities/socials/socials.pug
 include ../blocks/entities/mb-menu/mb-menu.pug
+include ../blocks/entities/nav-submenu/nav-submenu.pug
+
+include ../blocks/feature/contact-group/contact-group.pug
 
 include ../blocks/widgets/page-header/page-header.pug
 include ../blocks/widgets/page-footer/page-footer.pug
